--- a/public/pages/api.html
+++ b/public/pages/api.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>API DOCUMENTATION</p>
+    <h1>Bienvenue sur l'API Cars Researcher</h1>
+    <p><a href="https://cardataexplorerapi.onrender.com/api-docs/">Cliquez ici pour accéder à la documentation</a></p>
 </body>
 </html>
